fixed alignment and added table

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 .App {
-  align-items: center;
+  display: grid;
+    grid-template-rows: auto 1fr; /* Header takes auto height, content takes remaining space */
+}
+
+.main-content {
+  padding-top: 80px; /* Optional padding */
+  overflow-y: auto; /* Scrollable content if needed */
 }
 
 .header {
@@ -35,7 +41,7 @@
   display: flex;
   width: 100%;
   height: 70vh;
-  margin-top: 1%;
+  margin-top: 10px;
 }
 
 .panel {
@@ -128,12 +134,8 @@
   border: 2px dashed #007BFF; /* Dashed border for drag-and-drop area */
   padding: 10px;
   border-radius: 4px;
-  background-color: #f9f9f9; /* Light background color */
-  margin: 100px;
-  padding-left: 20px;
+  background-color: #f9f9f9;
   text-align: center;
-  display: flex;
-  flex-direction:column;
 }
 
 .file-input {
@@ -191,3 +193,44 @@
   display: flex;
   justify-content: center;
 }
+
+/* Table Styles */
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 5px;
+  background-color: #fff; /* Optional: change this to match your theme */
+}
+
+table thead th {
+  background-color: #f2f2f2; /* Light grey background for the table headers */
+  text-align: left;
+  padding: 10px;
+  border-bottom: 2px solid #ddd; /* Bottom border for the headers */
+  color: #333;
+  font-weight: bold;
+}
+
+table tbody td {
+  padding: 10px;
+  border-bottom: 1px solid #ddd; /* Bottom border for the table rows */
+}
+
+table tbody tr:nth-child(even) {
+  background-color: #f9f9f9; /* Light grey background for even rows */
+}
+
+table input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+h3 {
+  margin-top: 10px; /* Add some margin above each section heading */
+  color: #333;
+}
+
